--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,60 +1,114 @@
 .contenedor{
+    margin: 0px 5%;
+    width: 90%;
+    margin-top: 105px;
     display: flex;
-    width: 80%;
-    margin: 0% 10%;
-    .datosSuper{
-        width: 40%;
-        .inputBox{
-            .label{
-                font-weight: bold;
-            }
-            .input{
+    flex-direction: row;
 
-            }
-        }
-        .agregar{
-            margin-top: 10px;
-            background-color: lightgreen;
-        }
-        .guardar{
-            margin-top: 10px;
-            background-color: lightgreen;
-        }
-
+    .form-container{
+        width: 400px;
     }
-    .listadoSuper{
-        width: 60%;
-        .percent{
-            text-align: right;
-        }
-        .list-container{
-            .row{
-                display:flex;
-                align-items: center;
-                .description{
-                    display: flex;
-                    width: 100%;
-                    background-color: lightgreen;
-                    .count-description{
-                        flex-grow: 1;
-                    }
-                    .editar{
-
-                        height: 50px;
-                        width: 50px;
-                    }
-                    .eliminar{
-                        height: 50px;
-                        width: 50px;
-                    }
-                }
-                .check{
-                    .check-list{
-                        width: 50px;
-                        height: 50px;
-                    }
-                }
-            }
-        }
+    .list-container{
+        flex-grow: 1;
+        padding-left: 23px;
     }
 }
+
+@media (max-width: 1100px) {
+    .contenedor{
+        flex-direction: column;
+        align-items: center;
+        .form-container{
+            width: 100%;
+        }
+        .list-container{
+            padding-left: 0px;
+            padding-top: 23px;
+            width: 100%;
+        }
+        
+    }
+    
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+// .contenedor{
+//     display: flex;
+//     width: 80%;
+//     margin: 0% 10%;
+//     .datosSuper{
+//         width: 40%;
+//         .inputBox{
+//             .label{
+//                 font-weight: bold;
+//             }
+//             .input{
+
+//             }
+//         }
+//         .agregar{
+//             margin-top: 10px;
+//             background-color: lightgreen;
+//         }
+//         .guardar{
+//             margin-top: 10px;
+//             background-color: lightgreen;
+//         }
+
+//     }
+//     .listadoSuper{
+//         width: 60%;
+//         .percent{
+//             text-align: right;
+//         }
+//         .list-container{
+//             .row{
+//                 display:flex;
+//                 align-items: center;
+//                 .description{
+//                     display: flex;
+//                     width: 100%;
+//                     background-color: lightgreen;
+//                     .count-description{
+//                         flex-grow: 1;
+//                     }
+//                     .editar{
+
+//                         height: 50px;
+//                         width: 50px;
+//                     }
+//                     .eliminar{
+//                         height: 50px;
+//                         width: 50px;
+//                     }
+//                 }
+//                 .check{
+//                     .check-list{
+//                         width: 50px;
+//                         height: 50px;
+//                     }
+//                 }
+//             }
+//         }
+//     }
+// }
