--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -13,6 +13,18 @@
         padding-left: 23px;
     }
 }
+.loading{
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2;
+    background-color: rgba(0, 0, 0, 0.473);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 @media (max-width: 1100px) {
     .contenedor{
